Renamed defs (to avoid conflicts with other mods)

--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -3,15 +3,15 @@
 	<ShashlichnikCaveAboutToCollapse>Cave is about to collapse</ShashlichnikCaveAboutToCollapse>
 	<ShashlichnikCaveUnstable>Cave looks unstable</ShashlichnikCaveUnstable>
 	<ShashlichnikCaveStabilityAdvice>Cave becomes more unstable over time. Your mining can reduce cave stability as well.\nYou can build collumns to slightly improve stability.\nThe lower the stability, the more frequent landslides will occur.\nWhen stability hits zero the cave will collapse</ShashlichnikCaveStabilityAdvice>
-	<EnterCave>Enter cave</EnterCave>
-	<ExitCave>Exit cave</ExitCave>
-	<CaveCollapsing>Cave is collapsing.</CaveCollapsing>
-	<CaveCollapsingDesc>Cave is collapsing! Extract your colonitsts as fast as possible.</CaveCollapsingDesc>
-	<MessageCaveExitCollapsed>Exit collapsed, but there may be another way out...</MessageCaveExitCollapsed>
-	<MessageCaveCollapsed>Cave collapsed.</MessageCaveCollapsed>
-	<LandslideIncoming>The roof of the cave looks unstable, be aware of landslides.</LandslideIncoming>
+	<ShashlichnikEnterCave>Enter cave</ShashlichnikEnterCave>
+	<ShashlichnikExitCave>Exit cave</ShashlichnikExitCave>
+	<ShashlichnikCaveCollapsing>Cave is collapsing.</ShashlichnikCaveCollapsing>
+	<ShashlichnikCaveCollapsingDesc>Cave is collapsing! Extract your colonitsts as fast as possible.</ShashlichnikCaveCollapsingDesc>
+	<ShashlichnikMessageCaveExitCollapsed>Exit collapsed, but there may be another way out...</ShashlichnikMessageCaveExitCollapsed>
+	<ShashlichnikMessageCaveCollapsed>Cave collapsed.</ShashlichnikMessageCaveCollapsed>
+	<ShashlichnikLandslideIncoming>The roof of the cave looks unstable, be aware of landslides.</ShashlichnikLandslideIncoming>
 	<ShashlichnikEnableAnomalyEffects>Enable more effects from Anomaly</ShashlichnikEnableAnomalyEffects>
 	<ShashlichnikMapSize>Underground map size</ShashlichnikMapSize>
 	<ShashlichnikUndergroundTemperatureModifier>Underground temperature modifier</ShashlichnikUndergroundTemperatureModifier>
-	<MustBeOnSurface>Must be on surface.</MustBeOnSurface>
+	<ShashlichnikMustBeOnSurface>Must be on surface.</ShashlichnikMustBeOnSurface>
 </LanguageData>
