Player now able to disable landslides and stability

--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -16,4 +16,6 @@
 	<ShashlichnikMustBeOnSurface>Must be on surface.</ShashlichnikMustBeOnSurface>
 	<ShashlichnikCaveNotDugYet>Cave has not been dug yet</ShashlichnikCaveNotDugYet>
 	<ShashlichnikCaveCollapsing>Cave is collapsing</ShashlichnikCaveCollapsing>
+	<ShashlichnikStabilitySystemEnabled>Stability system enabled</ShashlichnikStabilitySystemEnabled>
+	<ShashlichnikLandslidesEnabled>Landslides enabled</ShashlichnikLandslidesEnabled>
 </LanguageData>
