--- a/Languages/Russian/Keyed/Keys.xml
+++ b/Languages/Russian/Keyed/Keys.xml
@@ -18,4 +18,6 @@
 	<ShashlichnikCaveCollapsing>Пещера обрушается</ShashlichnikCaveCollapsing>
 	<ShashlichnikStabilitySystemEnabled>Система стабильности включена</ShashlichnikStabilitySystemEnabled>
 	<ShashlichnikLandslidesEnabled>Оползни включены</ShashlichnikLandslidesEnabled>
+	<ShashlichnikMineableModifier>Модификатор полезных ископаемых</ShashlichnikMineableModifier>
+	<ShashlichnikMineableModifierExplanation>Регулирует количество ресурсов на подземной карте. Значение 4 эквиваленто количеству на равниной карте, а значение 15 соответсвует горной местности.\nПо умолчанию 7.</ShashlichnikMineableModifierExplanation>
 </LanguageData>
