--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -20,6 +20,6 @@
 	<ShashlichnikLandslidesEnabled>Landslides enabled</ShashlichnikLandslidesEnabled>
 	<ShashlichnikMineableModifier>Mineable resources modifier</ShashlichnikMineableModifier>
 	<ShashlichnikMineableModifierExplanation>Adjusts the amount of resources on the underground map. A value of 4 is equivalent to a flat map, while a value of 15 corresponds to mountainous terrain.\nDefault is 7.</ShashlichnikMineableModifierExplanation>
-	<ShashlichnikExitIfNoJob>Exit if no job</ShashlichnikExitIfNoJob>
-	<ShashlichnikExitIfNoJobDesc>Colonists will go the surface if there's no job left</ShashlichnikExitIfNoJobDesc>
+	<ShashlichnikExitIfNoWork>Exit if no work</ShashlichnikExitIfNoWork>
+	<ShashlichnikExitIfNoWorkDesc>Colonists will go the surface if there's no work left</ShashlichnikExitIfNoWorkDesc>
 </LanguageData>
