--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -25,4 +25,7 @@
 	<ShashlichnikAutoEnterDesc>Colonist will automatically enter the cave if there's a work to do (mining and hauling only)</ShashlichnikAutoEnterDesc>
 	<WeAreRich>We're rich!</WeAreRich>
 	<ShashlichnikShutUp>Shut up!</ShashlichnikShutUp>
+	<ShashlichnikShutUp1>Yes, yes, you're rich. Time to get a move on, I got Management\nbreathing down my neck here!</ShashlichnikShutUp1>
+	<ShashlichnikShutUp2>Tick tock, team...! We're not getting any younger here!</ShashlichnikShutUp2>
+	<ShashlichnikShutUp3>I told them letting you keep the gold for yourselves was a mistake...</ShashlichnikShutUp3>
 </LanguageData>
