--- a/Languages/Spanish/DefInjected/WorkGiverDef/WorkGiver.xml
+++ b/Languages/Spanish/DefInjected/WorkGiverDef/WorkGiver.xml
@@ -5,4 +5,15 @@
 	<ShashlichnikDigCaveEntrance.verb>Cavar</ShashlichnikDigCaveEntrance.verb>
 	<ShashlichnikDigCaveEntrance.gerund>Cavando</ShashlichnikDigCaveEntrance.gerund>
 
+	<ShashlichnikGoDownIfJobUnderground_Miner.label>bajar para minar</ShashlichnikGoDownIfJobUnderground_Miner.label>
+	<ShashlichnikGoDownIfJobUnderground_Miner.verb>bajar</ShashlichnikGoDownIfJobUnderground_Miner.verb>
+	<ShashlichnikGoDownIfJobUnderground_Miner.gerund>bajando</ShashlichnikGoDownIfJobUnderground_Miner.gerund>
+
+	<ShashlichnikGoDownIfJobUnderground_Haul.label>bajar para transportar</ShashlichnikGoDownIfJobUnderground_Haul.label>
+	<ShashlichnikGoDownIfJobUnderground_Haul.verb>bajar</ShashlichnikGoDownIfJobUnderground_Haul.verb>
+	<ShashlichnikGoDownIfJobUnderground_Haul.gerund>bajando</ShashlichnikGoDownIfJobUnderground_Haul.gerund>
+
+	<ShashlichnikGoDownIfJobUnderground_HaulToPortal.label>bajar para transportar</ShashlichnikGoDownIfJobUnderground_HaulToPortal.label>
+	<ShashlichnikGoDownIfJobUnderground_HaulToPortal.verb>bajar</ShashlichnikGoDownIfJobUnderground_HaulToPortal.verb>
+	<ShashlichnikGoDownIfJobUnderground_HaulToPortal.gerund>bajando</ShashlichnikGoDownIfJobUnderground_HaulToPortal.gerund>
 </LanguageData>
