--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -28,4 +28,6 @@
 	<ShashlichnikShutUp1>Yes, yes, you're rich. Time to get a move on, I got Management\nbreathing down my neck here!</ShashlichnikShutUp1>
 	<ShashlichnikShutUp2>Tick tock, team...! We're not getting any younger here!</ShashlichnikShutUp2>
 	<ShashlichnikShutUp3>I told them letting you keep the gold for yourselves was a mistake...</ShashlichnikShutUp3>
+	<ShashlichnikNotStableYet>The ground there is not stable enough yet, try again later</ShashlichnikNotStableYet>
+	<ShashlichnikCloseToOtherCavern>Close to other caverns</ShashlichnikCloseToOtherCavern>
 </LanguageData>
