--- a/Languages/Russian/Keyed/Keys.xml
+++ b/Languages/Russian/Keyed/Keys.xml
@@ -29,4 +29,6 @@
 	<ShashlichnikShutUp1>Да, да, вы богаты! Время двигаться дальше, у меня тут Руковдство дышит в шею!</ShashlichnikShutUp1>
 	<ShashlichnikShutUp2>Тик так, команда...! Время не резиновое!</ShashlichnikShutUp2>
 	<ShashlichnikShutUp3>Я говорил им, что позволять вам самим забирать золото, это ошибка...</ShashlichnikShutUp3>
+	<ShashlichnikNotStableYet>Земля здесь недостаточно стабильная, попробуйте еще раз позже</ShashlichnikNotStableYet>
+	<ShashlichnikCloseToOtherCavern>Слишком близко к другим пещерам</ShashlichnikCloseToOtherCavern>
 </LanguageData>
