--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -2,11 +2,11 @@
 <LanguageData>
 	<ShashlichnikCaveAboutToCollapse>Cave is about to collapse</ShashlichnikCaveAboutToCollapse>
 	<ShashlichnikCaveUnstable>Cave looks unstable</ShashlichnikCaveUnstable>
-	<ShashlichnikCaveStabilityAdvice>Cave becomes more unstable over time. Your mining can reduce cave stability as well.\nYou can build collumns to slightly improve stability.\nThe lower the stability, the more frequent landslides will occur.\nWhen stability hits zero the cave will collapse</ShashlichnikCaveStabilityAdvice>
+	<ShashlichnikCaveStabilityAdvice>Cave becomes more unstable over time. Your mining can reduce cave stability as well.\nYou can build columns to slightly improve stability.\nThe lower the stability, the more frequent landslides will occur.\nWhen stability hits zero the cave will collapse</ShashlichnikCaveStabilityAdvice>
 	<ShashlichnikEnterCave>Enter cave</ShashlichnikEnterCave>
 	<ShashlichnikExitCave>Exit cave</ShashlichnikExitCave>
 	<ShashlichnikCaveCollapsing>Cave is collapsing</ShashlichnikCaveCollapsing>
-	<ShashlichnikCaveCollapsingDesc>Cave is collapsing! Extract your colonitsts as fast as possible.</ShashlichnikCaveCollapsingDesc>
+	<ShashlichnikCaveCollapsingDesc>Cave is collapsing! Extract your colonists as fast as possible.</ShashlichnikCaveCollapsingDesc>
 	<ShashlichnikMessageCaveExitCollapsed>Exit collapsed, but there may be another way out...</ShashlichnikMessageCaveExitCollapsed>
 	<ShashlichnikMessageCaveCollapsed>Cave collapsed.</ShashlichnikMessageCaveCollapsed>
 	<ShashlichnikLandslideIncoming>The roof of the cave looks unstable, be aware of landslides.</ShashlichnikLandslideIncoming>
