Missing Spanish keys

--- a/Languages/Spanish/Keyed/Keys.xml
+++ b/Languages/Spanish/Keyed/Keys.xml
@@ -28,4 +28,6 @@
 	<ShashlichnikShutUp1>Sí, sí, ya sé que son ricos. ¡Muévanse ya, que tengo a Gerencia respirándome en la nuca!</ShashlichnikShutUp1>
 	<ShashlichnikShutUp2>¡Rápido, equipo! ¡No nos estamos haciendo más jóvenes!</ShashlichnikShutUp2>
 	<ShashlichnikShutUp3>Ya les dije que dejarles quedarse con el oro era un error...</ShashlichnikShutUp3>
+	<ShashlichnikNotStableYet>El terreno allí no es lo suficientemente estable todavía, inténtalo de nuevo más tarde</ShashlichnikNotStableYet>
+	<ShashlichnikCloseToOtherCavern>Demasiado cerca de otras cavernas</ShashlichnikCloseToOtherCavern>
 </LanguageData>
